# munity

./: .cache  CODE_OF_CONDUCT.md  LICENSE  README.md  app.py  functions.py  main.py  pyproject.toml  todo.txt  updates.md
static/: Munity.avif  main.css  sticky.js
templates/: guessalbum.html  guessalbumresults.html  guesssong.html  guesssongresults.html  index.html  leaderboard.html  login.html  profile.html  setartist.html  signup.html  userprofile.html
